haciendo el total en el carrito de compras segun se selecciona o elimina objetos

--- a/css/style.css
+++ b/css/style.css
@@ -143,4 +143,9 @@ img {
     padding: 5px 10px;
     cursor: pointer;
   }
-  
+  .total-carrito {
+    background-color: #f0f0f0; /* Color de fondo sombreado */
+    padding: 10px;
+    text-align: left;
+    font-weight: bold;
+  }
